<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name" translatable="false">MultiCraft</string>
	<!-- preparation for start -->
	<string name="preparing">Preparing to launch&#8230;</string>
	<string name="loading">Loading&#8230;</string>
	<string name="notification_title">Loading MultiCraft</string>
	<string name="notification_description">Less than 1 minute&#8230;</string>

	<string name="input_text">Enter text</string>
	<string name="input_password">Enter password</string>

	<!-- no connection dialog -->
	<string name="conn_title">No Internet Connection!</string>
	<string name="conn_message">MultiCraft requires an Internet connection to use all game features.\nOtherwise, you will not get Updates and Multiplayer mode will be not available!</string>
	<string name="conn_wifi" translatable="false">Wi-Fi</string>
	<string name="conn_mobile" translatable="false">LTE</string>
	<string name="ignore">Ignore</string>

	<!-- Crash -->
	<string name="sorry">We are sorry!</string>
	<string name="restart">Unfortunately, unexpected issue was happened, would you like to restart the app?</string>
	<string name="no_space">No space left for game files, please free up space on the disk before restarting the app</string>
	<string name="close_game">Close game</string>
	<string name="restart_game">Restart</string>
</resources>
