<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingLeft="16dp"
			android:paddingTop="24dp"
			android:paddingRight="16dp"
			android:text="@string/conn_message"
			android:textColor="@color/grey_900" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/ignore"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:layout_weight="0.3"
				android:text="@string/ignore"
				android:textAllCaps="false"
				android:textColor="@android:color/white"
				app:backgroundTint="@color/red" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/mobile"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:layout_weight="0.4"
				android:text="@string/conn_mobile"
				android:textAllCaps="false"
				android:textColor="@android:color/white"
				app:backgroundTint="@color/green_mc" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/wifi"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:layout_weight="0.4"
				android:text="@string/conn_wifi"
				android:textAllCaps="false"
				android:textColor="@android:color/white"
				app:backgroundTint="@color/green_mc" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
