<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical"
		android:paddingHorizontal="10dp"
		android:paddingTop="10dp">

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:gravity="center"
			android:paddingStart="16dp"
			android:paddingEnd="16dp"
			android:text="@string/sorry"
			android:textSize="22sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/restart"
				android:paddingStart="12dp"
				android:paddingTop="4dp"
				android:paddingEnd="12dp"
				android:paddingBottom="4dp"
				app:srcCompat="@drawable/sad" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/error_desc"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:minHeight="128dp"
				android:paddingStart="4dp"
				android:paddingTop="4dp"
				android:paddingEnd="4dp"
				android:paddingBottom="4dp"
				android:text="@string/restart"
				android:textSize="15sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/close"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="8dp"
				android:layout_marginTop="4dp"
				android:layout_marginEnd="4dp"
				android:layout_marginBottom="4dp"
				android:layout_weight="0.5"
				android:text="@string/close_game"
				android:textStyle="bold" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/restart"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="4dp"
				android:layout_marginTop="4dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="4dp"
				android:layout_weight="0.5"
				android:text="@string/restart_game"
				android:textStyle="bold" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
